--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "file:node_modules/gulp-babel"
+    "gulp-babel": "file:node_modules/gulp-babel",
+    "gulp-eslint": "^2.0.0"
   }
 }
